# GPT4FREE_Project

./: .gitignore  README.md  commit_tui_v2.py  pyproject.toml
Desktop/makefile/: Makefile  Practicemakefile
Desktop/makefile/testing-tdd/: domain.md  test_ndfl_basic.py
src/gpt4free/: __init__.py  chat.py  config.py  main.py  mcp_client.py  providers.py  render.py  skills.py  tools.py  tools_setup.py
src/gpt4free/config/: __init__.py  app_config.py  config_manager.py  config_schema.py
src/gpt4free/tui/: app.py
src/gpt4free/tui/widgets/: __init__.py  chat_log.py  keys_screen.py  pickers.py  proxy.py  status.py
tests/: test_all_models.py  test_chat.py  test_config.py  test_main_cli.py  test_mcp_client.py  test_providers.py  test_skills.py  test_tools.py  test_tools_setup.py
tests/fixtures/: dummy_mcp_server.py
tests/test_config/: test_api_keys_and_custom_providers.py  test_app_config.py  test_backward_compatibility.py  test_config_manager.py  test_performance.py  test_proxy.py  test_tools_mcp.py
