dependencies = [
    "g4f>=0.4.0",
    "textual>=0.80.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "platformdirs>=4.0.0",
    "httpx>=0.27.0",
    "markdown-it-py>=3.0.0",
    "pygments>=2.18.0",
    "curl-cffi>=0.15.0",
    "browser-cookie3>=0.20.1",
    "jsonschema>=4.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "anyio>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
gpt4free = "gpt4free.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/gpt4free"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "anyio>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.coverage.run]
source = ["src/gpt4free"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
]
fail_under = 80
show_missing = true