[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpt4free-tui"
version = "2.0.0"
description = "GPT4Free TUI/CLI — Gemini CLI style terminal interface for free LLMs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "GPT4FREE TUI" }]
keywords = ["gpt4free", "tui", "cli", "llm", "ai", "terminal"]

dependencies = [
    "g4f==7.7.0",
    "textual>=0.80.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "platformdirs>=4.0.0",
    "httpx>=0.27.0",
    "markdown-it-py>=3.0.0",
    "pygments>=2.18.0",
    "curl-cffi>=0.15.0",
    "browser-cookie3>=0.20.1",
    "jsonschema>=4.20.0",
    "zendriver>=0.4.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "anyio>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "mcp>=1.0.0",
]

[project.scripts]
gpt4free = "gpt4free.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/gpt4free"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "anyio>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN", "B", "C4", "SIM", "TID"]
ignore = ["ANN101", "ANN102", "ANN401", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "S"]
"src/gpt4free/tui/**/*.py" = ["ANN", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src/gpt4free --cov-report=term-missing --cov-report=html"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: unit tests",
]

[tool.pytest-benchmark]
group_by = "group"

[tool.coverage.run]
source = ["src/gpt4free"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
]
fail_under = 80
show_missing = true